--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,8 @@
                     <overwrite>true</overwrite>
                 </configuration>
             </plugin>
-
         </plugins>
+        <finalName>mall</finalName>
     </build>
 
 </project>
