--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: Qin123***
-    url: jdbc:mysql://101.200.122.168:3306/mall_xy?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    password: 123456@Xy
+    url: jdbc:mysql://47.108.142.223:3306/mall?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
   redis:
     host: 127.0.0.1
     port: 6379
